--- a/oxy.html
+++ b/oxy.html
@@ -18,7 +18,7 @@
             <li class="aui-list-item">
                 <div class="aui-list-item-inner">
                     <div class="aui-list-item-title aui-font-size-18">5/7更新</div>
-                    <p class="aui-ellipsis-2">
+                    <p >
                     1.修复复制人在水下行走、呼吸氧气等小bug；
                     2.中文本地化更新；
                     3.在规模增长中修复缺失字符串；
@@ -29,13 +29,15 @@
 8.改善某些调试日志使用的内存</p>
                 </div>
                 <div class="aui-info  aui-padded-t-0 aui-padded-r-15">
+                    <div class="aui-info-item aui-font-size-12">
+                    </div>
                     <div class="aui-info-item aui-font-size-12">2018-05-07</div>
                 </div>
             </li>
             <li class="aui-list-item">
                 <div class="aui-list-item-inner">
                     <div class="aui-list-item-title aui-font-size-18">牧场版发布 Ranching Upgrade Mark II Release</div>
-                    <p class="aui-ellipsis-2">牧场主们长期以来一直关心着殖民地的特殊动物，终于在圈养过程中很好地饲养了它们，他们得到了想象要的东西；小动物们！虫眼的小狗，史莱克和胖乎乎的仙女都在等你的照顾，加上一些新的动物，等不及要见到你了！
+                    <p >牧场主们长期以来一直关心着殖民地的特殊动物，终于在圈养过程中很好地饲养了它们，他们得到了想象要的东西；小动物们！虫眼的小狗，史莱克和胖乎乎的仙女都在等你的照顾，加上一些新的动物，等不及要见到你了！
                     新的特性：陨石形态，沙河模式等。</p>
                     <div class="aui-row aui-row-padded aui-margin-t-5">
                         <img src="mark.png"/>
