--- a/support.html
+++ b/support.html
@@ -1,10 +1,10 @@
-如果您在使用过程中遇到任何问题，请联系我们
+如果您在使用过程中遇到任何问题，请联系我们<br>
 
 
-App Technical Support
+App Technical Support<br>
 
 
-Email：dlsxxhfzyxzrgs@163.com
+Email：dlsxxhfzyxzrgs@163.com<br>
 
 
-TEl: +86-15152438138
+TEl: +86-15152438138<br>
