--- a/support.html
+++ b/support.html
@@ -1,4 +1,4 @@
-大理市民卡APP技术支持<br>
+<div style="text-align:center">大理市民卡APP技术支持<br>
 
 如果您在使用过程中遇到任何问题，请联系我们<br>
 
@@ -9,4 +9,4 @@ App Technical Support<br>
 Email：dlsxxhfzyxzrgs@163.com<br>
 
 
-TEl: +86-15152438138<br>
+  TEl: +86-15152438138<br></div>
